--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-<a href="">SIMPLY CHOCOLATE<img src="./images/chocolate.svg" alt="logo-chocolate" width="24px" height="24px"></a>
+<a href="">SIMPLY CHOCOLATE<img src="./images/chocolate.svg" alt="logo-chocolate" width="24" height="24"></a>
 <nav>
     <ul>
         <li><a href="">Home</a></li>
@@ -18,10 +18,10 @@
 <address>
     <ul>
         <li>
-            <a href=""><img src="./images/instagram.svg" alt="link-instagram" width="24px" height="24px"></a>  
+            <a href=""><img src="./images/instagram.svg" alt="link-instagram" width="24" height="24"></a>  
         </li>
         <li>
-            <a href=""><img src="./images/twitter.svg" alt="link-twitter" width="24px" height="24px" ></a>
+            <a href=""><img src="./images/twitter.svg" alt="link-twitter" width="24" height="24" ></a>
         </li>
     </ul>
 </address>
@@ -30,10 +30,9 @@
 <section>
     <h1>Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</h1>
     <ul>
-       <li><button tupe ="button">Buy now</button></li>
+       <li><button type ="button">Buy now</button></li>
        <li><button type="button">How it’s made</button></li> 
-       <li><button type="button">scroll down<img src="./images/fi-rr-angle-small-left.svg" alt="angle-small" width="22"
-             height="22">
+       <li><button type="button">scroll down<img src="./images/fi-rr-angle-small-left.svg" alt="angle-small" width="22" height="22">
             </button>
         </li>
     </ul>
