--- a/index.html
+++ b/index.html
@@ -2,43 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="web-site-chocolate" content="about chocolate products">
+    <meta name="description" content="Web site about chocolate products">
     <title>Simply chokolate</title>
 </head>
 <body>
+    <!--Header-->
 <header>
-<a href="">SIMPLY CHOCOLATE<img src="./images/chocolate.svg" alt="logo-chocolate" width="24" height="24"></a>
 <nav>
+    <a href="./index.html"><i>SIMPLY</i>CHOCOLATE<img src="./images/chocolate.svg" alt="logo-chocolate" width="24" height="24"></a>
     <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">How it’s made?</a></li>
-        <li><a href="">Chocolate is loved"</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="#how-it’s-made">How it’s made?</a></li>
+        <li><a href="#chocolate-is-loved">Chocolate is loved"</a></li>
     </ul>
 </nav>
-<address>
     <ul>
-        <li>
-            <a href=""><img src="./images/instagram.svg" alt="link-instagram" width="24" height="24"></a>  
-        </li>
-        <li>
-            <a href=""><img src="./images/twitter.svg" alt="link-twitter" width="24" height="24" ></a>
-        </li>
+        <li><a href=""><img src="./images/instagram.svg" alt="link-instagram" width="24" height="24"></a></li>
+        <li><a href=""><img src="./images/twitter.svg" alt="link-twitter" width="24" height="24" ></a></li>
     </ul>
-</address>
 </header>
 <main>
+
+    <!--Hero-->
 <section>
+    <img src="./images/section_hero/hero-image.jpg" alt="photo of chocolate with blueberries" width="1136" height="600">
     <h1>Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</h1>
-    <ul>
-       <li><button type ="button">Buy now</button></li>
-       <li><button type="button">How it’s made</button></li> 
-       <li><button type="button">scroll down<img src="./images/fi-rr-angle-small-left.svg" alt="angle-small" width="22" height="22">
-            </button>
-        </li>
-    </ul>
+    <button type ="button">Buy now</button>
+    <a href="#how-it’s-made">How it’s made</a>
+    <a href="#benefits">scroll down</a><img src="./images/fi-rr-angle-small-left.svg" alt="angle-small" width="22" height="22">
 </section>
-<section>
-    <h2>Benefits</h2>
+
+<!--Benefits-->
+<section id="benefits">
+    <h2>Our Benefits</h2>
     <ul>
         <li>
             <img src="./images/fluent-emoji-high-contrast_chocolate-bar.svg" alt="icon-chocolate" width="32" height="32">
@@ -48,7 +44,7 @@
     chocolate bliss.</p>
         </li>
         <li>
-            <img src="./images/Group.svg" alt="icon-dollar" width="32" height="32">
+            <img src="./images/group.svg" alt="icon-dollar" width="32" height="32">
             <h3>Affordable price</h3>
             <p>Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's selection of affordable treats.
             Enjoy mouth-watering truffles and velvety chocolate bars without sacrificing taste or quality. Browse our selection and
@@ -63,33 +59,37 @@
         </li>
     </ul>
 </section>
+
+<!--Ingridients-->
 <section>
-   <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION</h2>
+   <h2>it all adds up to one exceptional taste sensation</h2>
    <p>At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From the sourcing of the
 finest ingredients to the careful crafting of each individual piece, every step of our process adds up to one
 exceptional taste sensation.</p>
 <ul>
     <li>
-        <img src="./images/kisspng-milk-white-chocolate-1.jpg" alt="photo of chocolate" width="224" height="171">
-        <h3>MILK CHOCOLATE</h3>
+        <img src="./images/ingridients/chokolate.png" alt="chocolate" width="206" height="160">
+        <h3>milk chokolate</h3>
     </li>
     <li>
-        <img src="./images/kisspng-milk-white-chocolate-2.jpg" alt="photo of coffee beans" width="224" height="171">
-        <h3>SEMI - SWEET CHOCOLATE</h3>
+        <img src="./images/ingridients/bottle_of_milk.png" alt="milk" width="206" height="160">
+        <h3>milk</h3>
     </li>
     <li>
-        <img src="./images/kisspng-milk-white-chocolate-3.jpg" alt="photo of a bottle of milk" width="224" height="171">
-        <h3>Milk</h3>
-    </li>
-    <li>
-        <img src="./images/kisspng-milk-white-chocolate-4.jpg" alt="photo of nuts" width="224" height="171">
+        <img src="./images/ingridients/nuts.png" alt="nuts" width="206" height="160">
         <h3>nuts</h3>
+    </li>
+    <li>
+        <img src="./images/ingridients/semi-sweet-chocolate.png" alt="semi-sweet chokolate" width="206" height="160">
+        <h3>semi - sweet chokolate</h3>
     </li>
 </ul>
 </section>
-<section>
-    <h2>HOW IT’S made?</h2>
-    <img src="./images/image-produsing-chocolate.jpg" alt="photo of chocolate production" width="614" height="400">
+
+<!--How it is made-->
+<section id="how-it’s-made">
+    <h2>how it’s made?</h2>
+    <img src="./images/section_recipe/image-produsing.jpg" alt="photo of chocolate production" width="614" height="400">
     <h3>Try our chocolates today and discover the perfect balance of flavor</h3>
     <ul>
         <li>
@@ -110,16 +110,48 @@ exceptional taste sensation.</p>
         </li>
 </ul>
 </section>
+<section id="chocolate-is-loved">
+    <h2>chocolate is loved</h2>
+    <ul>
+        <li>
+            <img src="./images/reviews/review1.png" alt="photo of Victoria Dobrzhanska" width="80" height="80">
+            <h3>Victoria Dobrzhanska</h3>
+            <p>I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.</p>
+        </li>
+        <li>
+            <img src="./images/reviews/review2.png" alt="photo of Nazar Babenko" width="80" height="80">
+            <h3>Nazar Babenko</h3>
+            <p>This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the
+            chocolate is good.</p>
+        </li>
+        <li>
+            <img src="./images/reviews/review3.png" alt="photo of Olena Kampusch" width="80" height="80">
+            <h3>Olena Kampusch</h3>
+            <p>Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft
+            but crunchy.</p>
+        </li>
+    </ul>
+    <a href="./index.html">Leave a review</a>
+</section>
 </main>
+
+<!--Footer-->
 <footer>
-    <section>
-        <h2>Chocolate a delicious cure for a bad day</h2>
-        <h3>Contact us</h3>
+        <p>Chocolate a delicious cure for a bad day</p>
+        <h2>Contact us</h2>
         <address>
-            <a href="tel:+380684439426">+380 (68) 443-94-26</a>
-            <a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
+           <ul> 
+            <li><a href="tel:+380684439426">+380 (68) 443-94-26</a></li>
+            <li><a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a></li>
+           </ul> 
         </address>
-    </section>
+   <nav>
+        <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="">How it’s made?</a></li>
+        <li><a href="">Chocolate is loved"</a></li>
+        </ul>
+    </nav>
 </footer>
 </body>
 </html>
