--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     chocolate bliss.</p>
         </li>
         <li>
-            <img src="./images/group.svg" alt="icon-dollar" width="32" height="32">
+            <img src="./images/icon_dollar.svg" alt="icon-dollar" width="32" height="32">
             <h3>Affordable price</h3>
             <p>Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's selection of affordable treats.
             Enjoy mouth-watering truffles and velvety chocolate bars without sacrificing taste or quality. Browse our selection and
