--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@ exceptional taste sensation.</p>
    <nav>
         <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="">How it’s made?</a></li>
-        <li><a href="">Chocolate is loved"</a></li>
+        <li><a href="#how-it’s-made">How it’s made?</a></li>
+        <li><a href="#chocolate-is-loved">Chocolate is loved"</a></li>
         </ul>
     </nav>
 </footer>
