--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <header class="page-header">
     <div class="container container-header">
 <nav class="page-nav">
-    <a  class="logo-link" href="./index.html"><i>SIMPLY</i>CHOCOLATE
+    <a  class="logo-link" href="./index.html"><i>SIMPLY</i>&nbsp;CHOCOLATE
         <svg class="icon-logo" width="21" height="21" aria-label="icon logo">
         <use href="./images/icons_chokolate.svg#icon-chocolate_logo">
         </use></svg></a>
@@ -52,7 +52,7 @@
 </ul>
 </div>
 
-<div class="wrapper-menu-mob ">
+<div class="wrapper-menu-mob">
 <div class="container container-mobile-menu">
     <button class="bth-close-menu-mob" type="button">
         <svg width="28" height="28" aria-label="icon close menu mobile">
@@ -161,12 +161,21 @@ finest ingredients to the careful crafting of each individual piece, every step 
 exceptional taste sensation.</p>
 
 <ul class="list list-tastes">
-    
     <li class="item-taste-card">
-
-       <img srcset="./images/ingridients/chokolate_desk_1x.png 1x, 
-       ./images/ingridients/chokolate_desk_2x.png 2x"
-       src="./images/ingridients/chokolate_desk_1x.png" alt="chocolate taste" width="224" height="171" >
+             <picture>
+                  <source srcset="./images/ingridients/chokolate_desk_1x.png 1x, 
+                    ./images/ingridients/chokolate_desk_2x.png 2x"
+                    media="(min-width: 768px)"
+                  />
+                    <source srcset="./images/ingridients/chokolate_mob_1x.png 1x,
+                     ./images/ingridients/chokolate_mob_2x.png 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/ingridients/chokolate_mob_1x.png"
+                    alt="photo of chocolate"
+                  />
+                </picture>
         <h3 class="taste-card-title">milk chokolate</h3>
         <div class="overlay">
             <h3 class="title-overlay">milk chocolate</h3>
@@ -179,9 +188,13 @@ exceptional taste sensation.</p>
             milk chocolate is sold in the United States and Europe.</p></div>
     </li>
     <li class="item-taste-card">
-        <img srcset="./images/ingridients/bottle_of_milk_desk_1x.png 1x, 
-               ./images/ingridients/bottle_of_milk_desk_2x.png 2x" src="./images/ingridients/bottle_of_milk_desk_1x.png"
-            alt="bottle of milk" width="224" height="171">
+        <picture>
+            <source srcset="./images/ingridients/bottle_of_milk_desk_1x.png 1x, 
+                            ./images/ingridients/bottle_of_milk_desk_2x.png 2x" media="(min-width: 768px)" />
+            <source srcset="./images/ingridients/bottle_of_milk_mob_1x.png 1x,
+                            ./images/ingridients/bottle_of_milk_mob_2x.png 2x" media="(max-width: 767px)" />
+            <img src="./images/ingridients/bottle_of_milk_mob_1x.png" alt="photo of bottle of milk" />
+        </picture>
         <h3 class="taste-card-title" >milk</h3>
         <div class="overlay">
             <h3 class="title-overlay">milk</h3>
@@ -195,9 +208,13 @@ exceptional taste sensation.</p>
         </div>
     </li>
     <li class="item-taste-card" >
-        <img srcset="./images/ingridients/nuts_1x.png 1x, 
-            ./images/ingridients/nuts_desk_2x.png 2x"
-            src="./images/ingridients/nuts_1x.png" alt="nuts" width="224" height="171">
+    <picture>
+        <source srcset="./images/ingridients/nuts_desk_1x.png 1x, 
+                        ./images/ingridients/nuts_desk_2x.png 2x" media="(min-width: 768px)" />
+        <source srcset="./images/ingridients/nuts_mob_1x.png 1x,
+                        ./images/ingridients/nuts_mob_2x.png 2x" media="(max-width: 767px)" />
+        <img src="./images/ingridients/nuts_mob_1x.png" alt="photo of nuts" />
+    </picture>
         <h3  class="taste-card-title">nuts</h3>
         <div class="overlay">
             <h3 class="title-overlay">nuts</h3>
@@ -211,9 +228,13 @@ exceptional taste sensation.</p>
         </div>
     </li>
     <li class="item-taste-card">
-        <img srcset="./images/ingridients/semi_sweet_chocolate_desk_1x.png 1x, 
-             ./images/ingridients/semi_sweet_chocolate_desk_2x.png 2x" src="./images/ingridients/semi_sweet_chocolate_desk_1x.png" alt="nuts" width="224"
-            height="171">
+        <picture>
+            <source srcset="./images/ingridients/semi_sweet_chocolate_desk_1x.png 1x, 
+                            ./images/ingridients/semi_sweet_chokolate_desk_2x.png 2x"  media="(min-width: 768px)" />
+            <source srcset="./images/ingridients/semi_sweet_chokolate_mob_1x.png 1x,
+                            ./images/ingridients/semi_sweet_chokolate_mob_2x.png 2x"  media="(max-width: 767px)" />
+                  <img src="./images/ingridients/semi_sweet_chokolate_mob_1x.png" alt="photo of semi sweet chocolate" />
+        </picture>
         <h3  class="taste-card-title">semi - sweet chokolate</h3>
         <div class="overlay">
             <h3 class="title-overlay">semi - sweet chocolate</h3>
@@ -244,22 +265,37 @@ exceptional taste sensation.</p>
     </picture>
    <div  class="how-made-text-wrapper">
     <h3 class="how-made-list-title">Try our chocolates today and discover the perfect balance of flavor</h3>
-    <ul class="how-made-list">
+    <ul class="list how-made-list">
         <li class="how-made-list-item">
-            Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.
+           <p class="recipe-step">Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.
+       <svg class="icon-elipse" width="8" height="8">
+            <use href="./images/icons_chokolate.svg#icon-elipse"></use>
+        </svg></p> 
         </li>
         <li class="how-made-list-item" >
-            At the same time, prepare a water bath. Melt the butter on it.
+           <p class="recipe-step" >At the same time, prepare a water bath. Melt the butter on it.</p> 
         </li>
         <li class="how-made-list-item" >
-            "Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula so that the mass becomes
+           <p class="recipe-step" >"Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula so that the mass becomes
             uniform and silky.
+        <svg class="icon-elipse" width="8" height="8">
+            <use href="./images/icons_chokolate.svg#icon-elipse"></use>
+        </svg>
+        </p> 
         </li>
         <li class="how-made-list-item" >
-            Heat the mixture over low heat, letting it barely boil.
+           <p class="recipe-step" >Heat the mixture over low heat, letting it barely boil.
+            <svg class="icon-elipse" width="8" height="8">
+                <use href="./images/icons_chokolate.svg#icon-elipse"></use>
+            </svg>
+           </p> 
         </li>
         <li class="how-made-list-item" >
-            Pour the chocolate into special containers (can be replaced with ice molds). Allow to cool and harden.
+            <p class="recipe-step">Pour the chocolate into special containers (can be replaced with ice molds). Allow to cool and harden.
+                <svg class="icon-elipse" width="8" height="8">
+                    <use href="./images/icons_chokolate.svg#icon-elipse"></use>
+                </svg>
+            </p>
         </li>
 </ul> 
 </div>
@@ -318,6 +354,10 @@ exceptional taste sensation.</p>
              <ul class="list list-nav-footer">
                 <li><a class="nav-link-footer"  href="./index.html">Home</a></li>
                 <li><a class="nav-link-footer" href="#how-it’s-made">How it’s made?</a></li>
+                <ul class="positions-menu-footer-mob">
+                <li><a class="nav-link-footer nav-link-footer-mob" href="./index.html">Our products</a></li>
+                <li><a class="nav-link-footer" href="#how-it’s-made">Top sellers</a></li>
+                </ul>
                 <li><a class="nav-link-footer"  href="#chocolate-is-loved">Chocolate is loved</a></li>
              </ul>
         </nav>
@@ -332,12 +372,12 @@ exceptional taste sensation.</p>
 </footer>
 
                         <!--MODAL WINDOW-->
-<!--
+
 <div class="backdrop">
     <div class="form-content-box">
-    <p class="form-review-title">leave a review about <span class="form-review-title-span">our chokolate</span></p>                  
+    <p class="form-review-title">leave a review about <span class="orange-color">our chokolate</span></p>                  
     <button class="btn-close-form-review" type="button">
-        <svg class="icon-x-close" width="28" height="28" aria-label="icon slose ">
+        <svg class="icon-x-close" width="24" height="24" aria-label="icon slose ">
             <use href="./images/icons_chokolate.svg#icon-x-close"></use>
         </svg>
     </button>
@@ -346,7 +386,7 @@ exceptional taste sensation.</p>
        <label class="label-form-review" for="user-name">Name </label>
          <div class="input-form-review-box">
            <input class="input-form-review" id="user-name" name="user-name" type="text"  title="Anna" required>
-           <svg class="icon-input-form" width="24" height="24" aria-label="icon user">
+           <svg class="icon-input-form" width="17" height="17" aria-label="icon user">
             <use href="./images/icons_chokolate.svg#icon-user"></use>
            </svg>
          </div></div>
@@ -354,14 +394,14 @@ exceptional taste sensation.</p>
        <label class="label-form-review" for="user-email">Email</label>
           <div class="input-form-review-box">
        <input class="input-form-review" id="user-email" name="user-email" type="email"  title="email@gmail.com" required>
-            <svg class="icon-input-form" width="24" height="24" aria-label="icon email">
+            <svg class="icon-input-form" width="17" height="17" aria-label="icon email">
                 <use href="./images/icons_chokolate.svg#icon-mail"></use>
             </svg></div></div>
             <div class="label-input-box" >
        <label class="label-form-review" for="user-phone">Phone number</label>
           <div class="input-form-review-box">
        <input class="input-form-review" id="user-phone" name="user-phone"  type="tel"  title="+380000000000" required>
-            <svg class="icon-input-form" width="24" height="24" aria-label="icon-phone">
+            <svg class="icon-input-form" width="17" height="17" aria-label="icon-phone">
                 <use href="./images/icons_chokolate.svg#icon-phone"></use>
             </svg></div></div>
             <div  class="label-input-box">
@@ -376,14 +416,14 @@ exceptional taste sensation.</p>
             <svg class="icon-checkbox" width="10" height="9.5">
                 <use href="./images/icons_chokolate.svg#icon-small_angel"></use>
             </svg>
-        </span>I accept the terms and conditions of the
-        <a class="link-user-privacy" href="" target="_blank">Privacy Policy</a></label>
+        </span>
+        I accept the terms and conditions of the <a class="orange-color link-user-privacy" href="" target="_blank">Privacy Policy</a></label>
 </div>
         <button class="button-form-review" type="submit">Send</button>
     </form>
  </div>                  
 </div>
--->
+
 
 </body>
 </html>
