--- a/index.html
+++ b/index.html
@@ -304,10 +304,10 @@ exceptional taste sensation.</p>
 </section>
 
         <!--Reviews-->
-<!--
+
 <section class="section reviews" id="chocolate-is-loved">
     <div class="container">
-    <h2  class="review-title">chocolate <spa class="is-lover">is loved</spa></h2>
+    <h2  class="review-title"><span class="orange-color">chocolate</span> is loved</h2>
     <ul class="list reviews-list">
         <li class="review-list-item">
             <img class="photo-review" src="./images/reviews/photo_review1.png" alt="photo of a person" width="80" height="80" >
@@ -327,11 +327,26 @@ exceptional taste sensation.</p>
             but crunchy.</p>
         </li>
     </ul>
+    <div class="scroll-block-reviews">
+    <svg class="icon-scrool-reviews" width="28" height="13">
+        <use href="./images/icons_chokolate.svg#icon-scroll">
+        </use>
+    </svg>
+    <svg class="icon-scroll-elipse-reviews" width="13" height="13">
+        <use href="./images/icons_chokolate.svg#icon-scroll-elipse">
+        </use>
+    </svg>
+    </svg>
+    <svg class="icon-scroll-elipse-reviews" width="13" height="13">
+        <use href="./images/icons_chokolate.svg#icon-scroll-elipse">
+        </use>
+    </svg>
+  </div>
     <button class="button-leave-review"  type="button">Leave a review</button>
     </div>
 </section>
 </main>
--->
+
        <!--Footer-->
 
 <footer>
