finished added styles

--- a/index.html
+++ b/index.html
@@ -314,13 +314,13 @@ exceptional taste sensation.</p>
             <h3 class="name-review">Victoria Dobrzhanska</h3>
             <p class="review-text" >I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.</p>
         </li>
-        <li class="review-list-item">
+        <li class="review-list-item review-for-scroll-1">
             <img class="photo-review" src="./images/reviews/photo_review2.png" alt="photo of a person" width="80" height="80" >
             <h3  class="name-review">Nazar Babenko</h3>
             <p class="review-text" >This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the
             chocolate is good.</p>
         </li>
-        <li class="review-list-item">
+        <li class="review-list-item review-for-scroll-2">
             <img class="photo-review" src="./images/reviews/photo_review3.png" alt="photo of a person" width="80" height="80">
             <h3 class="name-review">Olena Kampusch</h3>
             <p class="review-text">Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft
@@ -390,7 +390,7 @@ exceptional taste sensation.</p>
 
 <div class="backdrop">
     <div class="form-content-box">
-    <p class="form-review-title">leave a review about <span class="orange-color">our chokolate</span></p>                  
+    <p class="form-review-title">leave a review<br>about <span class="orange-color">our chokolate</span></p>                  
     <button class="btn-close-form-review" type="button">
         <svg class="icon-x-close" width="24" height="24" aria-label="icon slose ">
             <use href="./images/icons_chokolate.svg#icon-x-close"></use>
@@ -432,7 +432,10 @@ exceptional taste sensation.</p>
                 <use href="./images/icons_chokolate.svg#icon-small_angel"></use>
             </svg>
         </span>
-        I accept the terms and conditions of the <a class="orange-color link-user-privacy" href="" target="_blank">Privacy Policy</a></label>
+        <span>I accept the terms and conditions of the 
+            <a class="orange-color link-user-privacy" href="" target="_blank">Privacy Policy</a>
+        </span>
+        </label>
 </div>
         <button class="button-form-review" type="submit">Send</button>
     </form>
