--- a/index.html
+++ b/index.html
@@ -310,18 +310,24 @@ exceptional taste sensation.</p>
     <h2  class="review-title"><span class="orange-color">chocolate</span> is loved</h2>
     <ul class="list reviews-list">
         <li class="review-list-item">
-            <img class="photo-review" src="./images/reviews/photo_review1.png" alt="photo of a person" width="80" height="80" >
+            <img class="photo-review" 
+            srcset="./images/reviews/photo_review1.png 1x, ./images/reviews/photo_review1@2.png 2x,"
+            src="./images/reviews/photo_review1.png" alt="photo of a person" width="80" height="80" >
             <h3 class="name-review">Victoria Dobrzhanska</h3>
             <p class="review-text" >I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.</p>
         </li>
         <li class="review-list-item review-for-scroll-1">
-            <img class="photo-review" src="./images/reviews/photo_review2.png" alt="photo of a person" width="80" height="80" >
+            <img class="photo-review" 
+            srcset="./images/reviews/photo_review2.png 1x, ./images/reviews/photo_review2@2.png 2x,"
+            src="./images/reviews/photo_review2.png" alt="photo of a person" width="80" height="80" >
             <h3  class="name-review">Nazar Babenko</h3>
             <p class="review-text" >This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the
             chocolate is good.</p>
         </li>
         <li class="review-list-item review-for-scroll-2">
-            <img class="photo-review" src="./images/reviews/photo_review3.png" alt="photo of a person" width="80" height="80">
+            <img class="photo-review" 
+            srcset="./images/reviews/photo_review3.png 1x, ./images/reviews/photo_review3@2.png 2x,"
+            src="./images/reviews/photo_review3.png" alt="photo of a person" width="80" height="80">
             <h3 class="name-review">Olena Kampusch</h3>
             <p class="review-text">Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft
             but crunchy.</p>
@@ -441,7 +447,5 @@ exceptional taste sensation.</p>
     </form>
  </div>                  
 </div>
-
-
 </body>
 </html>
